@@ -17,6 +17,7 @@
  */
 package org.apache.knox.gateway.filter.rewrite.api;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.ServiceLoader;
@@ -34,8 +35,8 @@ public abstract class UrlRewriteFunctionDescriptorFactory {
   public static <T extends UrlRewriteFunctionDescriptor<?>> T create( String name ) {
     try {
       Class<? extends UrlRewriteFunctionDescriptor> descriptorClass = MAP.get( name );
-      return (T)descriptorClass.newInstance();
-    } catch( InstantiationException | IllegalAccessException e ) {
+      return (T)descriptorClass.getDeclaredConstructor().newInstance();
+    } catch(InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e ) {
       throw new IllegalArgumentException( name );
     }
   }
